dig-src/main/default/objects/Case/fields/DIG_AI_Draft_Status__c.field-meta.xml
<CustomField>
  <fullName>DIG_AI_Draft_Status__c</fullName>
  <label>DIG AI Draft Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>true</default><label>None</label></value>
      <value><fullName>Requested</fullName><default>false</default><label>Requested</label></value>
      <value><fullName>Drafted</fullName><default>false</default><label>Drafted</label></value>
      <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
      <value><fullName>Suppressed</fullName><default>false</default><label>Suppressed</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>