dig-src/main/default/objects/Case/fields/DIG_AutoAck_Sent__c.field-meta.xml
<CustomField>
  <fullName>DIG_AutoAck_Sent__c</fullName>
  <label>DIG Auto Ack Sent</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>