dig-src/main/default/objects/Case/fields/DIG_Sensitive__c.field-meta.xml
<CustomField>
  <fullName>DIG_Sensitive__c</fullName>
  <label>DIG Sensitive</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>