dig-src/main/default/objects/Case/fields/DIG_SLA_FirstResponseBy__c.field-meta.xml
<CustomField>
  <fullName>DIG_SLA_FirstResponseBy__c</fullName>
  <label>DIG SLA First Response By</label>
  <type>DateTime</type>
</CustomField>