dig-src/main/default/objects/Case/fields/DIG_SLA_Status__c.field-meta.xml
<CustomField>
  <fullName>DIG_SLA_Status__c</fullName>
  <label>DIG SLA Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>OnTrack</fullName><default>true</default><label>On Track</label></value>
      <value><fullName>AtRisk</fullName><default>false</default><label>At Risk</label></value>
      <value><fullName>Breached</fullName><default>false</default><label>Breached</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>