dig-src/main/default/objects/Case/fields/DIG_SourceEmail__c.field-meta.xml
<CustomField>
  <fullName>DIG_SourceEmail__c</fullName>
  <label>DIG Source Email</label>
  <type>Email</type>
</CustomField>