dig-src/main/default/objects/Case/fields/DIG_Topic__c.field-meta.xml
<CustomField>
  <fullName>DIG_Topic__c</fullName>
  <label>DIG Topic</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Membership</fullName><default>false</default><label>Membership</label></value>
      <value><fullName>Summit</fullName><default>false</default><label>Summit</label></value>
      <value><fullName>Governance</fullName><default>false</default><label>Governance</label></value>
      <value><fullName>Sponsorship</fullName><default>false</default><label>Sponsorship</label></value>
      <value><fullName>General</fullName><default>true</default><label>General</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>