dig-src/main/default/objects/Case/fields/DIG_Urgency__c.field-meta.xml
<CustomField>
  <fullName>DIG_Urgency__c</fullName>
  <label>DIG Urgency</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
      <value><fullName>Normal</fullName><default>true</default><label>Normal</label></value>
      <value><fullName>High</fullName><default>false</default><label>High</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>